仅保留REST服务代码